--- a/src/index.html
+++ b/src/index.html
@@ -79,28 +79,32 @@
 
   <div class="marketing">
     <div class="container">
-      <div class="col-sm-4 col-md-4">
-        <span class="glyphicon glyphicon-heart-empty"></span>
-        <h3>HTML &amp; CSS</h3>
-        <p> HTML &amp; CSS make my heart melt</p>
-      </div>
-      <div class="col-sm-4 col-md-4">
-        <span class="glyphicon glyphicon-thumbs-up"></span>
-        <h3>JavaScript</h3>
-        <p>JavaScript is Ok and i can code in it!</p>
-      </div>
-      <div class="col-sm-4 col-md-4">
-        <span class="glyphicon glyphicon-record"></span>
-        <h3>Design</h3>
-        <p>I am ok at design</p>
+      <div class="row">
+        <div class="col-sm-4 col-md-4">
+          <span class="glyphicon glyphicon-heart-empty"></span>
+          <h3>HTML &amp; CSS</h3>
+          <p> HTML &amp; CSS make my heart melt</p>
+        </div>
+        <div class="col-sm-4 col-md-4">
+          <span class="glyphicon glyphicon-thumbs-up"></span>
+          <h3>JavaScript</h3>
+          <p>JavaScript is Ok and i can code in it!</p>
+        </div>
+        <div class="col-sm-4 col-md-4">
+          <span class="glyphicon glyphicon-record"></span>
+          <h3>Design</h3>
+          <p>I am ok at design</p>
+        </div>
       </div>
     </div>
   </div>
 
   <div class="footer">
-  <h3>Get in touch</h3>
-  <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
-</div>
+    <div class="container">
+      <h3>Get in touch</h3>
+      <p>I live in the cloud and can't be seen. Send messages to the good people at <a target="_blank" href="https://twitter.com/codeschool">Code School</a> and they'll notify me.</p>
+    </div>
+  </div>
 
     <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
